# cfly

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  urls.example.json  wrangler.example.toml
src/: lib.rs  utils.rs
