[package]
name = "cfly"
version = "0.1.0"
edition = "2024"
authors = ["Bob Liu <akagi201@gmail.com>"]
license = "Apache-2.0"
description = "A high-performance URL shortening service built with Cloudflare Workers and Rust"
repository = "https://github.com/longcipher/cfly"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.1", features = ['http', 'axum'] }
worker-macros = { version = "0.6.1", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["small"]
small = ["dep:wee_alloc"]
debug = ["dep:console_error_panic_hook"]
